blockml/test/valid/10_wherecalc_refs_mea/v23/v23m.model
model: v23m
sql_always_where_calc: ${a.mea2} + ${a.mea3} > 100
joins:

- from_view: v23_one
  as: a



