blockml/test/errors/12_chart/e189/e189m.model
model: e189m
joins:
- from_view: e189_one
  as: a
